--- a/A1/A1_A11492249.ipynb
+++ b/A1/A1_A11492249.ipynb
@@ -62,9 +62,9 @@
     "collapsed": true
    },
    "source": [
-    "My Student ID number is: \n",
+    "My Student ID number is: A11492249",
     "\n",
-    "My Github username is: "
+    "My Github username is: emsmalls "
    ]
   },
   {
